# Distributed-Variation

./: DoubleAdaptiveCBF3D.slx  QPref.m  README.md  cylinder3alpha.m  ender.m  init6CBF3D.m  intuitive.m  nominalsim.m  results.m  showtime2D.m  showtimeMP.m
DAT/: 0r.sh  1r.sh  2r.sh  3r.sh  4r.sh  sim.sh  single.sh  trajectory.sh
DAT/src/average_zxz/: CMakeLists.txt  package.xml
DAT/src/average_zxz/include/: DATnode.h  Netzxz.h  Point3D.h  UDPdata.h
DAT/src/average_zxz/launch/: UAV0_single.launch  UAV1_single.launch  UAV2_single.launch  UAV3_single.launch  UAV4_single.launch  simer.launch
DAT/src/average_zxz/src/: dat_sim.cpp  dat_single.cpp  swarm_cmder.cpp
DAT/src/average_zxz/src/DATnode/: DATnode.cpp  Netzxz.cpp  Point3D.cpp  communication.cpp  inits.cpp  methods.cpp
